--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.guitarapp</groupId>
 	<artifactId>guitarapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>guitarapp</name>
 	<description>Guitarapp proyect</description>
 	<properties>
